cambios al banner y al environment

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,1 +1,1 @@
-<div class="row"><img src="../../../assets/fondo.jpg" alt="Fondo"></div>
+<div class="row"><img src="../../../assets/banner.png" alt="Fondo"></div>
