--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -4,8 +4,8 @@
       <img src="../../../assets/APLogo.png" alt="Logo Argentina Programa" id="logoAP">
     </div>
     <div class="redes">
-        <a href="https://www.linkedin.com/in/alandcejas01/" target="_blank"><img src="../../../assets/linkedin.png" alt="Logo de Linkedin" /></a>
-        <a href="https://github.com/Alandcejas01" target="_blank"><img src="../../../assets/github.png" alt="Logo de GitHub" /></a>
+        <a href="https://www.linkedin.com/in/luis-matias-gimenez-b56516219/" target="_blank"><img src="../../../assets/linkedin.png" alt="Logo de Linkedin" /></a>
+        <a href="https://github.com/M4ty155" target="_blank"><img src="../../../assets/github.png" alt="Logo de GitHub" /></a>
         <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">Ingreso</button>
         <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">Cerrar Sesion</button>
     </div>
