--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <footer>
-    <p>Matias Gimenez | Argentina Programa 2023</p>
+    <p>Luis Matias Gimenez | Argentina Programa 2023</p>
   </footer>
 </div>
