cambios a la foto

--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -2,7 +2,7 @@
     <button type="button" routerLink="/editacercade/1" class="btn btn-dark" *ngIf="isLogged">Editar Persona</button>
 
   <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 flex-col-center">
-    <img src="{{persona.img}}" alt="" class="img-fluid" id="foto-perfil">
+    <img src="src\assets\el fafa.png" alt="" class="img-fluid" id="foto-perfil">
   </div>
   <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 flex-col-center">
     <p id="nombre">{{persona.nombre}} {{persona.apellido}}</p>
