--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -11,7 +11,7 @@
       <p>{{Proyecto.descripcion}}</p>
     </div>
     <div class="col-sm-12 col-md-4 col-lg-4 offset-md-1 offset-lg-1 proyecto1b">
-      <img src="{{Proyecto.img}}" class="img-fluid img-proyecto" >
+      <img src={{Proyecto.img}} class="img-fluid img-proyecto" >
     </div>
     <div class="buttonflex">
       <span *ngIf="isLogged">
