--- a/src/app/components/acerca-de/edit-acerca-de.component.html
+++ b/src/app/components/acerca-de/edit-acerca-de.component.html
@@ -23,7 +23,8 @@
           <input type="file" class="form-control" id="img" name="img" (click)="imagenCargada = true" (click)="this.imageService.url = ''" (change)="uploadImage($event)" accept=".jpg, .jpeg, .png" required>
         </div>
         <div class="imagen">
-          <ngx-spinner [fullScreen]="false" size="medium" type="pacman" color="#edb948">
+          <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#ff0000" type = "ball-8bits" [fullScreen] = "false"><p style="color: white">
+            Cargando
           </ngx-spinner>
           <img [src]="persona.img" width="200px" *ngIf="!imagenCargada">
           <img [src]="imageService.url" width="200px" *ngIf="imagenCargada">
