--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <ngx-spinner type="ball-8bits" color="#edb948">
+    Cargando
   </ngx-spinner>
   <app-logo-ap></app-logo-ap>
   <app-banner></app-banner>
